# CertiRAG

./: .env.example  .gitignore  ARCHITECTURE.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EVALUATION.md  LICENSE  MANIFEST.in  Makefile  PLAN.md  README.md  README_SPEC.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
certirag/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  utils.py
certirag/claim_ir/: __init__.py  compiler.py  gemini_compiler.py  normalizer.py  validator.py
certirag/ingest/: __init__.py  chunker.py  embedder.py  indexer.py
certirag/render/: __init__.py  certificate.py  policy.py
certirag/retrieve/: __init__.py  hybrid.py  span_extractor.py
certirag/schemas/: __init__.py  certificate.py  claim_ir.py  evidence.py  verification.py
certirag/verify/: __init__.py  calibrator.py  cascade_verifier.py  ensemble_verifier.py  gemini_verifier.py  groq_verifier.py  hf_nli_verifier.py  llm_judge.py  minicheck.py  mse.py  nli_verifier.py  verifier.py
configs/: default.yaml  mixed.yaml  strict.yaml
docs/: architecture.md
eval/: __init__.py  ablations.py  baselines.py  benchmark.py  metrics.py  optimizer.py  plots.py  run_full_eval.py  runner.py  scoring.py
eval/datasets/: __init__.py  aggrefact.py  alce.py  loaders.py  ragtruth.py
eval_results/: Cascade(gate+resolver)_anli_r1_200.json  Cascade(gate+resolver)_fever_nli_182.json  Cascade(gate+resolver)_vitaminc_200.json  DeBERTa-NLI-2class+opt_vitaminc_141.json  DeBERTa-NLI-3class+opt_vitaminc_141.json  DeBERTa-NLI-3class+opt_vitaminc_36.json  DeBERTa-NLI_anli_r1_200.json  DeBERTa-NLI_fever_nli_182.json  DeBERTa-NLI_vitaminc_200.json  Ensemble(accurate)_anli_r1_200.json  Ensemble(accurate)_fever_nli_182.json  Ensemble(accurate)_vitaminc_200.json  Ensemble(accurate)_vitaminc_50.json  Ensemble(sota)_anli_r1_200.json  Ensemble(sota)_fever_nli_182.json  Ensemble(sota)_vitaminc_200.json  Ensemble-SOTA+opt_vitaminc_141.json  Groq(llama-3.3-70b-versatile)_anli_r1_200.json  Groq(llama-3.3-70b-versatile)_anli_r2_200.json  Groq(llama-3.3-70b-versatile)_fever_nli_182.json  Groq(llama-3.3-70b-versatile)_vitaminc_200.json  MiniCheck-lite_vitaminc_200.json  benchmark_report.json  deberta-v3-base-zeroshot-v2.0_anli_r1_200.json  deberta-v3-base-zeroshot-v2.0_anli_r2_200.json  deberta-v3-base-zeroshot-v2.0_anli_r3_200.json  deberta-v3-base-zeroshot-v2.0_vitaminc_200.json  deberta-v3-base-zeroshot-v2.0_vitaminc_5.json  deberta-v3-base-zeroshot-v2.0_vitaminc_50.json  full_eval_report.json
notebooks/: 01_data_exploration.ipynb  02_retrieval_analysis.ipynb  03_verifier_calibration.ipynb  04_publication_plots.ipynb
tests/: conftest.py
tests/adversarial/: test_adversarial.py
tests/benchmark/: test_benchmark.py
tests/integration/: test_corruption.py  test_e2e_verification.py  test_golden.py
tests/unit/: test_atomicity.py  test_metrics.py  test_renderer.py  test_schemas.py  test_spans.py
ui/: app.py  pipeline.py  styles.py
